<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    
    <RelativeLayout
        android:id="@+id/login_botton_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/vertical_margin"
        >

        <TextView
            android:id="@+id/login_quick_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_m"
            android:textColor="#0C0C0C"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:text="@string/login_quick_login"
            />

        <TextView
            android:id="@+id/login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_m"
            android:textColor="#0C0C0C"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/horizontal_margin"
            android:text="@string/login_register"
            />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_above="@+id/login_botton_layout"
        android:dividerPadding="@dimen/vertical_margin_m"
        >
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="@dimen/text_size_xxxl"
            android:text="@string/login_welcom"
            android:paddingLeft="@dimen/horizontal_margin"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="@dimen/text_size_xxxl"
            android:text="@string/app_name"
            android:paddingLeft="@dimen/horizontal_margin"
            />

        <EditText
            android:id="@+id/phone_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:background="@drawable/login_edit_shape"
            android:layout_marginTop="@dimen/vertical_margin"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:layout_marginRight="@dimen/horizontal_margin"
            android:inputType="number"
            android:hint="@string/phone_number_hint"
            />

        <com.toro.helper.view.CustomEditText
            android:id="@+id/login_pwd_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:background="@drawable/login_edit_shape"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:layout_marginRight="@dimen/horizontal_margin"
            android:layout_marginTop="@dimen/vertical_margin_m"
            android:inputType="textPassword"
            android:hint="@string/login_pwd_hint"
            android:drawableRight="@mipmap/pwd_trans_hide"
            />

        <TextView
            android:id="@+id/forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin_m"
            android:textColor="#0C0C0C"
            android:textSize="@dimen/text_size_m"
            android:layout_gravity="right"
            android:layout_marginRight="@dimen/horizontal_margin"
            android:text="@string/login_forget_pwd"
            />

        <Button
            android:id="@+id/submit_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin"
            android:text="@string/login_submit"
            android:background="@drawable/main_button"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:layout_marginRight="@dimen/horizontal_margin"
            android:textColor="#FFFFFF"
            android:enabled="false"
            />

    </LinearLayout>

    <include layout="@layout/toro_progress_layout"/>

</RelativeLayout>