<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_normal_bg_color"
    android:orientation="vertical"
    tools:context=".activity.ResetPassword">

    <include layout="@layout/main_action_view"/>

    <com.toro.helper.view.CustomEditText
        android:id="@+id/pwd_edit1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="@drawable/edit_shape_top"
        android:layout_marginLeft="@dimen/horizontal_margin"
        android:layout_marginRight="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/vertical_margin_m"
        android:inputType="textPassword"
        android:hint="@string/login_pwd_hint"
        android:drawableRight="@mipmap/pwd_trans_display"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1sp"
        android:layout_marginLeft="@dimen/horizontal_margin"
        android:layout_marginRight="@dimen/horizontal_margin"
        android:background="@color/main_tab_normal_color"
        />

    <com.toro.helper.view.CustomEditText
        android:id="@+id/pwd_edit2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="@drawable/edit_shape_top"
        android:layout_marginLeft="@dimen/horizontal_margin"
        android:layout_marginRight="@dimen/horizontal_margin"
        android:inputType="textPassword"
        android:hint="@string/confirm_pwd"
        android:drawableRight="@mipmap/pwd_trans_display"
        />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_margin"
        android:text="@string/finish"
        android:background="@drawable/main_button"
        android:layout_marginLeft="@dimen/horizontal_margin"
        android:layout_marginRight="@dimen/horizontal_margin"
        android:textColor="#FFFFFF"
        />


</LinearLayout>